discussion/kv_engine/187373/187373_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-55711: Replace GetKVStoreStats in MagmaMemoryTrackingProxy

Replace GetKVStoreStats with a "custom" GetStatsForDbInfo function
that returns no heap managed memory.

The underlying Magma::GetKVStoreStats doesn't currently work with
the primary/secondary memory domains, the returned type is not safe
to be moved over the domain boundary.

Change-Id: I3cd1d758e884f10d1e0bfd7ca88081c2bdef0948

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-02-24 14:13:45.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-02-24 14:13:59.000000000
Message: 
Patch Set 1: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/340003/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2023-02-24 14:19:33.000000000
Message: 
Patch Set 1: Code-Review-1

(1 comment)
File Comment: /PATCHSET_LEVEL -> Can we add a test for this? 
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-24 14:28:59.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1269/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:289:27: error: use of undeclared identifier "DBFileInfo" [clang-diagnostic-error]
std::tuple<magma::Status, DBFileInfo>
                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:293:5: error: unknown type name "DBFileInfo" [clang-diagnostic-error]
    DBFileInfo rv;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:165:31: error: use of undeclared identifier "DBFileInfo" [clang-diagnostic-error]
    std::tuple<magma::Status, DBFileInfo> GetStatsForDbInfo(
                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1269/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:289:27:
error: use of undeclared identifier "DBFileInfo" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/1269/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1538/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore\magma-kvstore\magma-memory-tracking-proxy.h(165): error C2065: "DBFileInfo": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1538/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1225/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:165:31:
error: use of undeclared identifier "DBFileInfo"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/1225/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1304/ : FAILURE

Compile error at [2023-02-24T14:20:00.715Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:165:31:
error: ?DBFileInfo? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/1304/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1292/ : FAILURE

Compile error at [2023-02-24T14:20:40.363Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:165:31:
error: ?DBFileInfo? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/1292/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1296/ : FAILURE

Compile error at [2023-02-24T14:18:24.950Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:165:31:
error: use of undeclared identifier "DBFileInfo"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/1296/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22969/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/1261/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1642/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/1297/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/1301/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-02-24 14:34:53.000000000
Message: 
Patch Set 1:

(1 comment)
File Comment: /PATCHSET_LEVEL -> hopefully should be able to expose this in a magma suite... incoming
----------------------------------------------------------------------------------------------------------------------
Author: Jim Walker
Date: 2023-02-24 14:57:22.000000000
Message: 
Abandoned

not actually the bug - GetKVStoreStats is safe
----------------------------------------------------------------------------------------------------------------------
